refactor(requests): migrate RestActions, managers, and Route to internal request bodies