@@ -23,7 +23,6 @@ import net.dv8tion.jda.api.requests.restaction.order.CategoryOrderAction;
 import net.dv8tion.jda.internal.utils.Checks;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 
@@ -50,24 +49,25 @@ public class CategoryOrderActionImpl extends ChannelOrderActionImpl implements C
         return category;
     }
 
-    @Override
-    protected void validateInput(GuildChannel entity) {
-        Checks.notNull(entity, "Provided channel");
-        Checks.check(entity instanceof ICategorizableChannel, "Provided channel is not an ICategorizableChannel");
-        Checks.check(
-                getCategory().equals(((ICategorizableChannel) entity).getParentCategory()),
-                "Provided channel's Category is not this Category!");
-        Checks.check(orderList.contains(entity), "Provided channel is not in the list of orderable channels!");
-    }
-
     @Nonnull
     private static Collection<GuildChannel> getChannelsOfType(Category category, int bucket) {
         Checks.notNull(category, "Category");
         return ChannelOrderActionImpl.getChannelsOfType(category.getGuild(), bucket).stream()
                 .filter(ICategorizableChannel.class::isInstance)
-                .map(ICategorizableChannel.class::cast)
-                .filter(it -> category.equals(it.getParentCategory()))
+                .filter(it -> category.equals(((ICategorizableChannel) it).getParentCategory()))
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    protected void validateInput(GuildChannel entity) {
+        Checks.notNull(entity, "Provided channel");
+        if (!(entity instanceof ICategorizableChannel categorizable)) {
+            throw new IllegalArgumentException("Provided channel is not an ICategorizableChannel");
+        }
+        Checks.check(
+                getCategory().equals(categorizable.getParentCategory()),
+                "Provided channel's Category is not this Category!");
+        Checks.check(orderList.contains(entity), "Provided channel is not in the list of orderable channels!");
     }
 }
