@@ -91,7 +91,7 @@ public class ThreadMemberPaginationActionImpl extends PaginationActionImpl<Threa
         }
 
         if (!members.isEmpty()) {
-            last = members.get(members.size() - 1);
+            last = members.getLast();
             lastKey = last.getIdLong();
         }
         request.onSuccess(members);
